--- a/StudyTimer/Presentation/StudyTimer.MVC/StudyTimer.MVC.csproj
+++ b/StudyTimer/Presentation/StudyTimer.MVC/StudyTimer.MVC.csproj
@@ -4,6 +4,18 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>d403a505-27f0-4c7a-85cc-e4b180a8117f</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.14">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Infrastructure\StudyTimer.Persistence\StudyTimer.Persistence.csproj" />
+  </ItemGroup>
 
 </Project>
