--- a/.gitignore
+++ b/.gitignore
@@ -398,3 +398,4 @@ FodyWeavers.xsd
 *.sln.iml
 /StudyTimer/Presentation/StudyTimer.MVC/appsettings.json
 StudyTimer/Presentation/StudyTimer.MVC/appsettings.json
+StudyTimer/Presentation/StudyTimer.MVC/appsettings.json
