[Update]  StudyTimer.API auth controller

--- a/StudyTimer/StudyTimer.API/StudyTimer.API.csproj
+++ b/StudyTimer/StudyTimer.API/StudyTimer.API.csproj
@@ -11,4 +11,13 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core\StudyTimer.Application\StudyTimer.Application.csproj" />
+    <ProjectReference Include="..\Infrastructure\StudyTimer.Persistence\StudyTimer.Persistence.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
