--- a/StudyTimer/StudyTimer.API/appsettings.json
+++ b/StudyTimer/StudyTimer.API/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Team7PostgreSQLDB": "Server=91.151.83.102;Port=5432;Database=Team7_StudyTimer;User Id=enesfeyzierginteam;Password=EmwWHaw48Z7LRBJz8ABALpPUN;"
 }
