--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,6 @@ FodyWeavers.xsd
 /StudyTimer/Presentation/StudyTimer.MVC/appsettings.json
 StudyTimer/Presentation/StudyTimer.MVC/appsettings.json
 StudyTimer/Presentation/StudyTimer.MVC/appsettings.json
+StudyTimer/Presentation/StudyTimer.MVC/appsettings.json
+StudyTimer/Presentation/StudyTimer.MVC/appsettings.json
+StudyTimer/Presentation/StudyTimer.MVC/Controllers/AuthController.cs
