--- a/StudyTimer/Presentation/StudyTimer.MVC/StudyTimer.MVC.csproj
+++ b/StudyTimer/Presentation/StudyTimer.MVC/StudyTimer.MVC.csproj
@@ -13,6 +13,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="NToastNotify" Version="7.0.0" />
+    <PackageReference Include="Resend" Version="0.0.5" />
   </ItemGroup>
 
   <ItemGroup>
