--- a/.gitignore
+++ b/.gitignore
@@ -402,3 +402,4 @@ StudyTimer/Presentation/StudyTimer.MVC/appsettings.json
 StudyTimer/Presentation/StudyTimer.MVC/appsettings.json
 StudyTimer/Presentation/StudyTimer.MVC/appsettings.json
 StudyTimer/Presentation/StudyTimer.MVC/Controllers/AuthController.cs
+/StudyTimer/Presentation/StudyTimer.MVC/appsettings.json
