--- a/StudyTimer/Infrastructure/StudyTimer.Persistence/StudyTimer.Persistence.csproj
+++ b/StudyTimer/Infrastructure/StudyTimer.Persistence/StudyTimer.Persistence.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.14">
