--- a/StudyTimer/Presentation/StudyTimer.MVC/StudyTimer.MVC.csproj
+++ b/StudyTimer/Presentation/StudyTimer.MVC/StudyTimer.MVC.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.14">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
