--- a/StudyTimer/Infrastructure/StudyTimer.Persistence/StudyTimer.Persistence.csproj
+++ b/StudyTimer/Infrastructure/StudyTimer.Persistence/StudyTimer.Persistence.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\StudyTimer.Application\StudyTimer.Application.csproj" />
     <ProjectReference Include="..\..\Core\StudyTimer.Domain\StudyTimer.Domain.csproj" />
   </ItemGroup>
 
